# PDFTools

./: index.html  interfaz.md  package-lock.json  package.json  pnpm-lock.yaml  requerimientos.md  svelte.config.js  tailwind.config.js
.github/workflows/: build-macos.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/native/macos/: precision-pdf-ocr.swift
src-tauri/src/: lib.rs  ocr.rs  pdf_ops.rs
