[package]
name = "PDFTools"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
lopdf = "0.36.0"
pdf-writer = "0.15.0"
rayon = "1.10.0"
image = "0.25.6"
windows = { version = "0.61.3", features = ["Media_Ocr", "Graphics_Imaging", "Storage_Streams", "Foundation"] }
rfd = "0.17.2"
base64 = "0.22.1"
